--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
 #root{
   min-height: 100vh;
   width: 100%;
-  display: flex; 
+  /* display: flex; 
   justify-content: center;
-  align-items: center;
+  align-items: center; */
   scroll-behavior: smooth;
 }
